Fri Sep 26 08:42:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Toolbar buttons now work correctly with contact support.

Thu Sep 25 16:16:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Contacts in the buddy list now behave as they do in gtk gaim,
	    which means a contact looks like a normal buddy unless you
	    tap-and-hold and click Expand, in which case it becomes a group.
	    Clicking collapse or clicking the little collapse icon next to it
	    will turn it back into its buddy form.

Thu Sep 25 15:55:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/collapse.png:
	* data/images/expand.png:
	  - Added Expand and Collapse images.

Thu Sep 25 08:51:51 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Unexpanding a contact now hides the buddies inside.

Thu Sep 25 08:46:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Display the gaim icon when a flag in the item says it's expanded.
	    That's currently not set anywhere yet, though.

Wed Sep 24 22:48:32 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - The tree is now parsed and displayed as a tree with contacts.

Wed Sep 24 20:55:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* make.sh:
	  - Rebuild Makefile every time make.sh is ran.

Wed Sep 24 20:45:39 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimDialogs.cpp:
	  - API sync with libgaim 0.69.

Thu Sep 11 08:28:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Adding the initial framework for the preferencs dialog.
